plugins {
    id 'java'
    id 'dev.architectury.loom' version '1.13-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.gradleup.shadow' version '8.3.6' apply false
    id 'me.modmuss50.mod-publish-plugin' version '1.+'
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = project.group
    version = project.mod_version
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "${project.mod_id}-${project.name}-${project.minecraft_version}"
    }

    repositories {
        mavenCentral()

        exclusiveContent {
            forRepository {
                maven {
                    name = "CurseMaven"
                    url = uri("https://cursemaven.com")
                }
            }
            filter {
                includeGroup "curse.maven"
            }
        }

        exclusiveContent {
            forRepository {
                maven {
                    name = "Modrinth Maven"
                    url = uri("https://api.modrinth.com/maven")
                }
            }
            filter {
                includeGroup "maven.modrinth"
            }
        }

        exclusiveContent {
            forRepositories(
                    maven {
                        name = 'ParchmentMC'
                        url = uri("https://maven.parchmentmc.org/")
                    },
                    maven {
                        name = "NeoForge"
                        url = uri('https://maven.neoforged.net/releases')
                    }
            )
            filter { includeGroup('org.parchmentmc.data') }
        }

        maven {
            name = 'Forge'
            url = uri('https://maven.minecraftforge.net/releases')
            content {
                includeGroup "com.github.glitchfiend"
            }
        }

        maven {
            name = "Forge Config API Port Maven"
            url = uri("https://raw.githubusercontent.com/Fuzss/modresources/main/maven/")
            content {
                includeGroup "fuzs.forgeconfigapiport"
                includeGroup "net.minecraftforge"
            }
        }

        maven {
            name = "DevAuth Maven"
            url = uri("https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1")
            content {
                includeGroup "me.djtheredstoner"
            }
        }

        maven {
            name = "FTB Maven"
            url = uri("https://maven.ftb.dev/releases")
            content {
                includeGroup "dev.ftb.mods"
            }
        }

        maven {
            // location of the maven that hosts JEI files since January 2023
            name = "Jared's maven"
            url = "https://maven.blamejared.com/"
        }

        maven {
            name = "shedaniel Maven"
            url = uri("https://maven.shedaniel.me/")
            content {
                includeGroup "me.shedaniel"
                includeGroup "dev.architectury"
                includeGroup "me.shedaniel.cloth"
            }
        }

        maven {
            name = "TerraformerMC Maven"
            url = uri("https://maven.terraformersmc.com/releases/")
        }

        maven {
            name = "LadySnake Maven - Cardinal Components"
            url = uri("https://maven.ladysnake.org/releases")
            content {
                includeGroup "io.github.onyxstudios.Cardinal-Components-API"
                includeGroup "dev.onyxstudios.cardinal-components-api"
                includeGroup "org.ladysnake.cardinal-components-api"
            }
        }

        maven {
            name = "Xaero Maven"
            url = uri("https://chocolateminecraft.com/maven")
            content {
                includeGroup "xaero.lib"
                includeGroup "xaero.minimap"
            }
        }

        maven {
            name = "Journeymap API MAven"
            url = uri("https://jm.gserv.me/repository/maven-public/")
            content {
                includeGroup "info.journeymap"
            }
        }

        maven {
            name = "Homeostatic Seasons"
            url = uri("https://raw.githubusercontent.com/wendall911/maven/main/")
            content {
                includeGroup "com.github.wendall911.climatesettings"
                includeGroup "com.github.wendall911.homeostaticseasons"
                includeGroup "technology.roughness.whitenoise"
            }
        }

        maven {
            name = "Accessories Maven"
            url = uri("https://maven.wispforest.io/releases")
            content {
                includeGroup "io.wispforest"
                includeGroup "io.wispforest.endec"
            }
        }

        maven {
            name = "ModMaven (Backup)"
            url = uri("https://modmaven.dev/")
        }
    }

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "net.minecraft:minecraft:${project.minecraft_version}"
        //mappings loom.officialMojangMappings()
        mappings loom.layered() {
            officialMojangMappings()
            parchment("org.parchmentmc.data:parchment-${project.minecraft_version}:${project.parchment_version}@zip")
        }

        implementation 'com.demonwav.mcdev:annotations:2.1.0'
        implementation("org.jspecify:jspecify:1.0.0")
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 8
    }

    // Configure Maven publishing.
    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
            // Add repositories to publish to here.
            // Notice: This block does NOT have the same function as the block in the top level.
            // The repositories here will be used for publishing your artifact, not for
            // retrieving dependencies.
        }
    }

    processResources {
        def expandProps = [
                "version"                      : project.version,
                "group"                        : project.group, //Else we target the task's group.
                "minecraft_version"            : project.minecraft_version,
                "minecraft_version_range"      : project.minecraft_version_range,
                "forge_version"                : project.forge_version,
                "forge_loader_version_range"   : project.forge_loader_version_range,
                "forge_version_range"          : project.forge_version_range,
                "fabric_api_version"           : project.fabric_api_version,
                "fabric_loader_version"        : project.fabric_loader_version,
                "fabric_version_range"         : project.fabric_version_range,
                "neoforge_version"             : project.neoforge_version,
                "neoforge_loader_version_range": project.neoforge_loader_version_range,
                "neoforge_version_range"       : project.neoforge_version_range,
                "mod_name"                     : project.mod_name,
                "mod_author"                   : project.mod_author,
                "mod_id"                       : project.mod_id,
                "mod_description"              : project.mod_description,
                "license"                      : project.license,
                "repoURL"                      : project.repoURL,
                "issueTrackerURL"              : project.issueTrackerURL,
                "credits"                      : project.credits,
                "java_version"                 : project.java_version
        ]

        var jsonExpandProps = expandProps.collectEntries {
            key, value -> [(key): value instanceof String ? value.replace("\n", "\\\\n") : value]
        }

        filesMatching(['META-INF/mods.toml', 'META-INF/neoforge.mods.toml']) {
            expand expandProps
        }

        filesMatching(['pack.mcmeta', 'fabric.mod.json', '*.mixins.json']) {
            expand jsonExpandProps
        }

        inputs.properties(expandProps)
    }
}

tasks.register('latestChangelog') {
    group = "changelog"

    def fullChangelog = projectDir.toPath().getParent().resolve("CHANGELOG.md").toFile()
    def latestChangelog = projectDir.toPath().getParent().resolve("LATEST_CHANGELOG.md").toFile()

    int firstHeading = fullChangelog.getText().indexOf("## [")
    int nextHeading = fullChangelog.getText().indexOf("## [", firstHeading + 1)

    String latestChangelogText = fullChangelog.getText().substring(firstHeading, nextHeading)

    outputs.upToDateWhen {
        if (latestChangelog.exists()) {
            return latestChangelogText == latestChangelog.getText()
        } else return false
    }

    outputs.file file("LATEST_CHANGELOG.md")
    doLast {
        latestChangelog.text = latestChangelogText
        printf(latestChangelog.text)
    }
}

publishMods {
    dryRun = true
    type = STABLE
    changelog = project.getRootDir().toPath().resolve("LATEST_CHANGELOG.md").getText()
}

idea.module { downloadJavadoc = downloadSources = true }

tasks.register('publishAll') {
    group = "upload"

    dependsOn("latestChangelog")
    dependsOn("publishMods")
}